--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me!</span></h2>
 
-        <form action="https://formsubmit.co/farhanishrat556@gmail.com" method="POST">
+        <form action="https://formsubmit.co/devwithfarhan@gmail.com" method="POST">
             <div class="input-box">
                 <input type="text" placeholder="Full Name">
                 <input type="email" placeholder="Email Address">
