--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me!</span></h2>
 
-        <form action="AKfycbyIasSZnwes0fxLZnP_vP5psyvgQeY-eLjs-1F8j4-b" method="POST">
+        <form action="https://script.google.com/macros/s/AKfycbwv88iYHirCywnZnI1f3TWp-Ko_r6P4Z1dJ02Tq75LWeYfqIK-M8r_jHbTzhyhnOUcBrA/exec" method="POST">
             <div class="input-box">
                 <input type="text" placeholder="Full Name">
                 <input type="email" placeholder="Email Address">
