--- a/index.html
+++ b/index.html
@@ -440,6 +440,10 @@
             <textarea name="message" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
             <input type="submit" value="Send Message" class="btn">
         </form>
+
+        <div id="success-message" style="display:none; color: green; margin-top: 10px;">
+  ✅ Message sent successfully!
+</div>
     </section>
 
     <footer class="footer">
