--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
             <textarea name="message" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
             <input type="submit" value="Send Message" class="btn">
         </form>
-<div id="success-message">✅ Message sent successfully!</div>
+<div id="success-message">Message sent successfully!</div>
     </section>
 
     <footer class="footer">
