--- a/index.html
+++ b/index.html
@@ -434,10 +434,10 @@
 
         <form action="https://script.google.com/macros/s/AKfycbwv88iYHirCywnZnI1f3TWp-Ko_r6P4Z1dJ02Tq75LWeYfqIK-M8r_jHbTzhyhnOUcBrA/exec" method="POST">
             <div class="input-box">
-                <input type="text" name="name" placeholder="Full Name">
-                <input type="email" name="email" placeholder="Email Address">
+                <input type="text" name="name" placeholder="Full Name" required>
+                <input type="email" name="email" placeholder="Email Address" required>
             </div>
-            <textarea name="message" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <textarea name="message" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
             <input type="submit" value="Send Message" class="btn">
         </form>
 <div id="success-message">Message sent successfully!</div>
