--- a/index.html
+++ b/index.html
@@ -248,26 +248,24 @@
                 and is optimized for performance and mobile responsiveness.
                 <br>
                 <br>
-                <span>⚙️ Key Features Implemented:</span>
+                <span>Features:</span>
                 <br>
-                ✅ Custom-designed pages with Elementor & Elementskit Lite
+                User-friendly product catalog with categories & filters
                 <br>
-                ✅ Secure Payment Gateway integrated using Safepay for WooCommerce
+                Detailed product pages with size, color, and image gallery
                 <br>
-                ✅ Product Wishlist functionality with TI WooCommerce Wishlist
+                Secure customer authentication (login, signup)
                 <br>
-                ✅ Enhanced product display using Variation Swatches for WooCommerce
+                Shopping cart & checkout system
                 <br>
-                ✅ Optimized for speed with LiteSpeed Cache
+                Fully responsive design (works on mobile, tablet, desktop)
                 <br>
-                ✅ Contact functionality using Contact Form 7
+               Modern UI/UX with brand styling
                 <br>
-                ✅ SEO-friendly and lightweight layout using Classic Widgets
-                <br>
-                ✅ Full site backup & migration enabled using All-in-One WP Migration & Backup
+                Admin panel to manage products, orders, and customers
             </p>
 
-            <p class="more-text" id="readmore-10"><span>🛠️ Plugins Used:</span>
+            <p class="more-text" id="readmore-10"><span>Plugins Used:</span>
                 <br>
                 All-in-One WP Migration & Backup
                 <br>
@@ -292,7 +290,7 @@
                 WooCommerce
                 <br>
                 <br>
-                <span>🌐 Hosting Provider:</span>
+                <span>Hosting Provider:</span>
                 <br>
                 Hostinger (Domain & Hosting)
             </p>
@@ -308,7 +306,7 @@
 
         <div class="about-content">
             <br><br>
-            <h2 class="heading">🧾 Cash & Carry Management System – <span>Web-Based POS & Inventory Software
+            <h2 class="heading">Cash & Carry Management System – <span>Web-Based POS & Inventory Software
                 </span></h2>
             <h3><span>Project Type:</span> Business Software / POS & Inventory System
                 <br>
@@ -320,7 +318,7 @@
                 <br>
                 <span>Theme Modes:</span> Light Mode, Dark Mode, Custom Color Paint Option
             </h3>
-            <p class="intro-text"><span>🔍 Project Overview:</span>
+            <p class="intro-text"><span>Project Overview:</span>
                 <br>
                 The Cash & Carry Management System is a comprehensive web-based software solution designed for retail
                 environments. It enables streamlined point-of-sale operations, real-time inventory tracking, employee
@@ -334,9 +332,9 @@
 
             <p class="more-text" id="readmore-11">
                
-                <span>🧩 Key Modules & Features:</span>
+                <span>Key Modules & Features:</span>
                 <br><br>
-                <span>📊 Dashboard</span>
+                <span>Dashboard</span>
                 <br>
                 Displays Total Sales, Total Profit, Total Stocks, Total Customers
                 <br>
@@ -346,19 +344,19 @@
                 <br>
                 Light / Dark Mode toggle and Custom Color Paint Tool to personalize UI
                 <br><br>
-                <span>🧾 Billing Section</span>
+                <span>Billing Section</span>
                 <br>
                 Real-time billing interface with receipt generation
                 <br>
                 Quick product search, barcode scan, and discount options
                 <br><br>
-                <span>📈 Sales Section</span>
+                <span>Sales Section</span>
                 <br>
                 No. of Sales, Total Revenue, Total Profit
                 <br>
                 Filtered views for daily, weekly, and monthly sales
                 <br><br>
-                <span>📦 Inventory Section</span>
+                <span>Inventory Section</span>
                 <br>
                 Sub-sections:
                 <br>
@@ -370,7 +368,7 @@
                 <br>
                 Automatic stock level detection and alert system
                 <br><br>
-                <span>👥 Customer Management</span>
+                <span>Customer Management</span>
                 <br>
                 Sub-sections:
                 <br>
@@ -380,7 +378,7 @@
                 <br>
                 3- Update Customer Info
                 <br><br>
-                <span>🧾 Order Management</span>
+                <span>Order Management</span>
                 <br>
                 Sub-sections:
                 <br>
@@ -392,7 +390,7 @@
                 <br>
                 4- Refunds / Returns
                 <br><br>
-                <span>🧑‍💼 Employee / Staff Activity</span>
+                <span>Employee / Staff Activity</span>
                 <br>
                 Sub-sections:
                 <br>
@@ -402,7 +400,7 @@
                 <br>
                 3- Time Clock / Shift Summary
                 <br><br>
-                <span>📑 Reports Section</span>
+                <span>Reports Section</span>
                 <br>
                 Sub-sections:
                 <br>
@@ -414,15 +412,15 @@
                 <br>
                 Export options in PDF/CSV for business analysis
                 <br><br>
-                <span>🎯 Key Highlights:</span>
+                <span>Key Highlights:</span>
                 <br>
-                ✅ Role-based login system (Manager & Staff)
+                Role-based login system (Manager & Staff)
                 <br>
-                ✅ Modern, responsive UI with color and theme customization
+                Modern, responsive UI with color and theme customization
                 <br>
-                ✅ Sidebar navigation with collapse/expand toggle
+                Sidebar navigation with collapse/expand toggle
                 <br>
-                ✅ Modular structure for easy future scaling
+                Modular structure for easy future scaling
             </p>
             <button onclick="toggleReadMore()" class="read-more-btn btn" data-target="readmore-11">Read More</button>
 
@@ -460,3 +458,4 @@
 </body>
 
 </html>
+
