--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <br>
                 <span>Hosting & Domain:</span> Hostinger
             </h3>
-            <p class="intro-text"><span>🔍 Project Overview:</span>
+            <p class="intro-text"><span>Project Overview:</span>
                 <br>
                 Ideal Collection is a responsive and user-friendly eCommerce website built using WordPress and
                 WooCommerce. It was designed to provide a seamless online shopping experience, showcasing products with
@@ -458,4 +458,5 @@
 </body>
 
 </html>
+
 
